--- a/Check_Services.ipynb
+++ b/Check_Services.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "967881f2-94f5-4124-8ba5-a0209c9db4b6",
    "metadata": {},
    "outputs": [],
@@ -29,9 +29,13 @@
     "\n",
     "    Raise an exception otherwise.\n",
     "    \"\"\"\n",
-    "    error = Exception(\"unknown error\")\n",
+    "    error = Exception(\"unknown scheme\")\n",
     "    \n",
-    "    if urlparse(url).scheme in (\"http\", \"https\"):\n",
+    "    parser = urlparse(url)\n",
+    "    host = parser.netloc or parser.path.split(\"/\")[0]\n",
+    "    \n",
+    "    \n",
+    "    if parser.scheme in (\"http\", \"https\"):\n",
     "        async with aiohttp.ClientSession() as session:\n",
     "            try:\n",
     "                await session.head(url, timeout=timeout,ssl=False)\n",
@@ -41,9 +45,7 @@
     "            except (asyncssh.Error) as e:\n",
     "                error = e\n",
     "                \n",
-    "    if urlparse(url).scheme in (\"ssh\"):\n",
-    "        parser = urlparse(url)\n",
-    "        host = parser.netloc or parser.path.split(\"/\")[0]\n",
+    "    if parser.scheme in (\"ssh\"):\n",
     "        if  parser.port == None : \n",
     "            port=22 \n",
     "        else: \n",
@@ -60,7 +62,49 @@
     "                error = Exception(\"timed out\")\n",
     "        except (asyncssh.Error) as e:\n",
     "                error = e\n",
-    "            \n",
+    "                \n",
+    "    if parser.scheme in (\"postgre\"):                \n",
+    "        if  parser.port == None : \n",
+    "            port=5432\n",
+    "        else: \n",
+    "            port=parser.port\n",
+    "            host=host.split(\":\")[0]\n",
+    "        \n",
+    "        coro = asyncio.open_connection(host, port)\n",
+    "        # execute the coroutine with a timeout\n",
+    "        try:\n",
+    "            # open the connection and wait for a moment\n",
+    "            _,writer = await asyncio.wait_for(coro, timeout)\n",
+    "            # close connection once opened\n",
+    "            writer.close()\n",
+    "            # indicate the connection can be opened\n",
+    "            return True\n",
+    "        except asyncio.TimeoutError:\n",
+    "                error = Exception(\"timed out\")\n",
+    "        except (asyncssh.Error) as e:\n",
+    "                error = e\n",
+    "                \n",
+    "    if parser.scheme in (\"kafka\"):                \n",
+    "        if  parser.port == None : \n",
+    "            port=9092\n",
+    "        else: \n",
+    "            port=parser.port\n",
+    "            host=host.split(\":\")[0]\n",
+    "        \n",
+    "        coro = asyncio.open_connection(host, port)\n",
+    "        # execute the coroutine with a timeout\n",
+    "        try:\n",
+    "            # open the connection and wait for a moment\n",
+    "            _,writer = await asyncio.wait_for(coro, timeout)\n",
+    "            # close connection once opened\n",
+    "            writer.close()\n",
+    "            # indicate the connection can be opened\n",
+    "            return True\n",
+    "        except asyncio.TimeoutError:\n",
+    "                error = Exception(\"timed out\")\n",
+    "        except (asyncssh.Error) as e:\n",
+    "                error = e\n",
+    "                \n",
     "    raise error\n",
     "    \n",
     "def display_check_result(result, url, error=\"\"):\n",
@@ -99,12 +143,12 @@
     "            lambda t: print(f'Task done with result={t.result()}  << return val of main()'))\n",
     "    else:\n",
     "        print('Starting new event loop')\n",
-    "        result = asyncio.run(_asynchronous_check(urls,timeout))\t\n"
+    "        result = asyncio.run(_asynchronous_check(urls,timeout))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "7f9bbdd1-7808-4d7a-b195-a59680cc1cca",
    "metadata": {},
    "outputs": [
@@ -112,8 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Async event loop already running. Adding coroutine to the event loop.\n",
-      "Task done with result=None  << return val of main()\n"
+      "Async event loop already running. Adding coroutine to the event loop.\n"
      ]
     }
    ],
@@ -125,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "66bbf506-df71-4585-a67b-a310fa777727",
    "metadata": {},
    "outputs": [
@@ -134,108 +177,52 @@
      "output_type": "stream",
      "text": [
       "Async event loop already running. Adding coroutine to the event loop.\n",
-      "The status of \"ssh://d01dc-ctrl504p.main.russianpost.ru\" is: \"Offline?\" 👎 \n",
-      "  Error: \"[Errno -2] Name or service not known\"\n",
-      "The status of \"ssh://d01dc-ctrl303p.main.russianpost.ru\" is: \"Offline?\" 👎 \n",
+      "The status of \"kafka://scanme.nmap.org:9093\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9093), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"http://scanme.nmap.org:8080\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Cannot connect to host scanme.nmap.org:8080 ssl:False [Connect call failed ('45.33.32.156', 8080)]\"\n",
+      "The status of \"https://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
+      "The status of \"kafka://scanme.nmap.org:9092\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9092), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"https://scanme.nmap.org:443\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
+      "The status of \"kafka://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5432), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"postgre://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5432), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"ssh://scanme.nmap.org:2222\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2222), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍\n",
+      "The status of \"http://scanme.nmap.org:80\" is: \"Online!\" 👍\n",
+      "The status of \"http://scanme.nmap.org/\" is: \"Online!\" 👍\n",
+      "The status of \"ssh://scanme.nmap.org:22\" is: \"Offline?\" 👎 \n",
       "  Error: \"Permission denied\"\n",
-      "The status of \"ssh://d01dc-ctrl404p.main.russianpost.ru:22\" is: \"Offline?\" 👎 \n",
+      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
       "  Error: \"Permission denied\"\n",
-      "The status of \"ssh://d01dc-ctrl404p.main.russianpost.ru:2222\" is: \"Offline?\" 👎 \n",
-      "  Error: \"timed out\"\n",
-      "Task done with result=None  << return val of main()\n"
-     ]
-    }
-   ],
-   "source": [
-    "check(timeout=3, urls=[\"ssh://d01dc-ctrl303p.main.russianpost.ru\",\"ssh://d01dc-ctrl504p.main.russianpost.ru\",\"ssh://d01dc-ctrl404p.main.russianpost.ru:22\",\"ssh://d01dc-ctrl404p.main.russianpost.ru:2222\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "4f8a8d9e-8843-4aff-a7c1-8017de19eb36",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Async event loop already running. Adding coroutine to the event loop.\n",
-      "The status of \"https://blablabla.russianpost.ru\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Cannot connect to host blablabla.russianpost.ru:443 ssl:False [Name or service not known]\"\n",
-      "The status of \"https://gitlab.tools.russianpost.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://jira.russianpost.ru\" is: \"Online!\" 👍\n",
-      "Task done with result=None  << return val of main()\n"
-     ]
-    }
-   ],
-   "source": [
-    "check(timeout=3,urls=[\"https://gitlab.tools.russianpost.ru\",\"https://jira.russianpost.ru\",\"https://blablabla.russianpost.ru\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "2abac13a-f341-4fc9-b045-0552e1a95567",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Async event loop already running. Adding coroutine to the event loop.\n",
-      "The status of \"http://10.233.10.101:9102\" is: \"Online!\" 👍\n",
-      "The status of \"http://int.reports.pochta.ru/dc-rest-test/api/test\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-ambari-clsu.russianpost.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://gitlab.tools.russianpost.ru/\" is: \"Online!\" 👍\n",
-      "The status of \"http://d01dc-ctrl121.main.russianpost.ru:8088/cluster/scheduler\" is: \"Online!\" 👍\n",
-      "The status of \"https://uat-reports.pochta.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-ambari-stru.russianpost.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-hue-uat.russianpost.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-hue-str.russianpost.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-yarn-clsu.russianpost.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-ambari-clsp.russianpost.ru/#/login\" is: \"Online!\" 👍\n",
-      "The status of \"http://datacloud-grafana.pochta.ru\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Cannot connect to host datacloud-grafana.pochta.ru:80 ssl:False [Name or service not known]\"\n",
-      "The status of \"https://dc-yarn-stru.russianpost.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-hue-clsp.russianpost.ru/\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-hue.russianpost.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-hue-dump.russianpost.ru\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-hue-strp.russianpost.ru/\" is: \"Online!\" 👍\n",
-      "The status of \"https://dc-ambari-strp.russianpost.ru/#/login\" is: \"Online!\" 👍\n",
-      "The status of \"http://kfm-uat.datacloud.russianpost.ru\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Cannot connect to host kfm-uat.datacloud.russianpost.ru:80 ssl:False [Name or service not known]\"\n",
-      "The status of \"ssh://d01dc-ctrl303p.main.russianpost.ru\" is: \"Offline?\" 👎 \n",
+      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
       "  Error: \"Permission denied\"\n",
       "Task done with result=None  << return val of main()\n"
      ]
     }
    ],
    "source": [
-    "check(timeout=3,urls=\n",
-    "[\n",
-    "\"http://d01dc-ctrl121.main.russianpost.ru:8088/cluster/scheduler\",\n",
-    "\"ssh://d01dc-ctrl303p.main.russianpost.ru\",\n",
-    "\"http://10.233.10.101:9102\",\n",
-    "\"https://gitlab.tools.russianpost.ru/\",\n",
-    "\"https://dc-ambari-clsu.russianpost.ru\",\n",
-    "\"http://datacloud-grafana.pochta.ru\",\n",
-    "\"https://dc-hue-str.russianpost.ru\",\n",
-    "\"https://dc-ambari-stru.russianpost.ru\",\n",
-    "\"https://dc-hue.russianpost.ru\",\n",
-    "\"http://int.reports.pochta.ru/dc-rest-test/api/test\",\n",
-    "\"https://uat-reports.pochta.ru\",\n",
-    "\"https://dc-hue-uat.russianpost.ru\",\n",
-    "\"http://kfm-uat.datacloud.russianpost.ru\",\n",
-    "\"https://dc-hue-dump.russianpost.ru\",\n",
-    "\"https://dc-yarn-stru.russianpost.ru\",\n",
-    "\"https://dc-yarn-clsu.russianpost.ru\",\n",
-    "\"https://dc-hue-clsp.russianpost.ru/\",\n",
-    "\"https://dc-hue-strp.russianpost.ru/\",\n",
-    "\"https://dc-ambari-clsp.russianpost.ru/#/login\",\n",
-    "\"https://dc-ambari-strp.russianpost.ru/#/login\"\n",
-    "]\n",
-    ")"
+    "check(timeout=5, urls=[\"kafka://scanme.nmap.org\",\n",
+    "                       \"kafka://scanme.nmap.org:9092\",\n",
+    "                       \"kafka://scanme.nmap.org:9093\",\n",
+    "                       \"postgre://scanme.nmap.org\",\n",
+    "                       \"http://scanme.nmap.org\",\n",
+    "                       \"http://scanme.nmap.org/\",\n",
+    "                       \"http://scanme.nmap.org:80\",\n",
+    "                       \"http://scanme.nmap.org:8080\",\n",
+    "                       \"https://scanme.nmap.org\",\n",
+    "                       \"https://scanme.nmap.org:443\",\n",
+    "                       \"ssh://scanme.nmap.org\",\n",
+    "                       \"ssh://scanme.nmap.org\",\n",
+    "                       \"ssh://scanme.nmap.org:22\",\n",
+    "                       \"ssh://scanme.nmap.org:2222\"\n",
+    "                      ]\n",
+    "     )"
    ]
   },
   {
