--- a/Check_Services.ipynb
+++ b/Check_Services.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "0c9658fa-7fe5-449e-8c7b-5304fe3dca7b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "967881f2-94f5-4124-8ba5-a0209c9db4b6",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "7f9bbdd1-7808-4d7a-b195-a59680cc1cca",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Async event loop already running. Adding coroutine to the event loop.\n"
+      "Async event loop already running. Adding coroutine to the event loop.\n",
+      "Task done with result=None  << return val of main()\n"
      ]
     }
    ],
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "66bbf506-df71-4585-a67b-a310fa777727",
    "metadata": {},
    "outputs": [
@@ -177,31 +178,34 @@
      "output_type": "stream",
      "text": [
       "Async event loop already running. Adding coroutine to the event loop.\n",
+      "The status of \"kafka://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9092), [Errno 99] Cannot assign requested address\"\n",
       "The status of \"kafka://scanme.nmap.org:9093\" is: \"Offline?\" 👎 \n",
       "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9093), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"http://scanme.nmap.org:8080\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Cannot connect to host scanme.nmap.org:8080 ssl:False [Connect call failed ('45.33.32.156', 8080)]\"\n",
-      "The status of \"https://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
-      "The status of \"kafka://scanme.nmap.org:9092\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9092), [Errno 99] Cannot assign requested address\"\n",
       "The status of \"https://scanme.nmap.org:443\" is: \"Offline?\" 👎 \n",
       "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
-      "The status of \"kafka://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5432), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"postgre://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5432), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"http://scanme.nmap.org:8080\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Cannot connect to host scanme.nmap.org:8080 ssl:False [Connect call failed ('45.33.32.156', 8080)]\"\n",
       "The status of \"ssh://scanme.nmap.org:2222\" is: \"Offline?\" 👎 \n",
       "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2222), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍\n",
-      "The status of \"http://scanme.nmap.org:80\" is: \"Online!\" 👍\n",
-      "The status of \"http://scanme.nmap.org/\" is: \"Online!\" 👍\n",
+      "The status of \"kafka://scanme.nmap.org:9092\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9092), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"postgre://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5432), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"https://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
+      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Permission denied\"\n",
+      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Permission denied\"\n",
       "The status of \"ssh://scanme.nmap.org:22\" is: \"Offline?\" 👎 \n",
       "  Error: \"Permission denied\"\n",
-      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Permission denied\"\n",
-      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Permission denied\"\n",
+      "The status of \"http://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"timed out\"\n",
+      "The status of \"http://scanme.nmap.org/\" is: \"Offline?\" 👎 \n",
+      "  Error: \"timed out\"\n",
+      "The status of \"http://scanme.nmap.org:80\" is: \"Offline?\" 👎 \n",
+      "  Error: \"timed out\"\n",
       "Task done with result=None  << return val of main()\n"
      ]
     }
