--- a/Check_Services.ipynb
+++ b/Check_Services.ipynb
@@ -2,17 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0c9658fa-7fe5-449e-8c7b-5304fe3dca7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install aiohttp asyncssh"
+    "#pip install aiohttp asyncssh\n",
+    "\n",
+    "#$ nmap scanme.nmap.org\n",
+    "#Starting Nmap 7.80 ( https://nmap.org ) at 2023-02-12 10:16 UTC\n",
+    "#Nmap scan report for scanme.nmap.org (45.33.32.156)\n",
+    "#Host is up (0.19s latency).\n",
+    "#Other addresses for scanme.nmap.org (not scanned): 2600:3c01::f03c:91ff:fe18:bb2f\n",
+    "#Not shown: 993 closed ports\n",
+    "#PORT      STATE    SERVICE\n",
+    "#22/tcp    open     ssh\n",
+    "#53/tcp    open     domain\n",
+    "#80/tcp    open     http\n",
+    "#2323/tcp  filtered 3d-nfsd\n",
+    "#5555/tcp  filtered freeciv\n",
+    "#9929/tcp  open     nping-echo\n",
+    "#31337/tcp open     Elite\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "967881f2-94f5-4124-8ba5-a0209c9db4b6",
    "metadata": {},
    "outputs": [],
@@ -105,6 +120,27 @@
     "        except (asyncssh.Error) as e:\n",
     "                error = e\n",
     "                \n",
+    "    if parser.scheme in (\"raw\"):                \n",
+    "        if  parser.port == None : \n",
+    "            port=0\n",
+    "        else: \n",
+    "            port=parser.port\n",
+    "            host=host.split(\":\")[0]\n",
+    "        \n",
+    "        coro = asyncio.open_connection(host, port)\n",
+    "        # execute the coroutine with a timeout\n",
+    "        try:\n",
+    "            # open the connection and wait for a moment\n",
+    "            _,writer = await asyncio.wait_for(coro, timeout)\n",
+    "            # close connection once opened\n",
+    "            writer.close()\n",
+    "            # indicate the connection can be opened\n",
+    "            return True\n",
+    "        except asyncio.TimeoutError:\n",
+    "                error = Exception(\"timed out\")\n",
+    "        except (asyncssh.Error) as e:\n",
+    "                error = e                \n",
+    "                \n",
     "    raise error\n",
     "    \n",
     "def display_check_result(result, url, error=\"\"):\n",
@@ -148,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7f9bbdd1-7808-4d7a-b195-a59680cc1cca",
    "metadata": {},
    "outputs": [
@@ -156,7 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Async event loop already running. Adding coroutine to the event loop.\n"
+      "Async event loop already running. Adding coroutine to the event loop.\n",
+      "Task done with result=None  << return val of main()\n"
      ]
     }
    ],
@@ -168,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "66bbf506-df71-4585-a67b-a310fa777727",
    "metadata": {},
    "outputs": [
@@ -176,39 +213,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task done with result=None  << return val of main()\n",
       "Async event loop already running. Adding coroutine to the event loop.\n",
-      "The status of \"https://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
-      "The status of \"kafka://scanme.nmap.org:9093\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9093), [Errno 99] Cannot assign requested address\"\n",
       "The status of \"kafka://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
       "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9092), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"postgre://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5432), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"ssh://scanme.nmap.org:2222\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2222), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"kafka://scanme.nmap.org:9092\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9092), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"http://scanme.nmap.org:80\" is: \"Online!\" 👍\n",
+      "The status of \"https://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
       "The status of \"http://scanme.nmap.org:8080\" is: \"Offline?\" 👎 \n",
       "  Error: \"Cannot connect to host scanme.nmap.org:8080 ssl:False [Connect call failed ('45.33.32.156', 8080)]\"\n",
+      "The status of \"kafka://scanme.nmap.org:9093\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9093), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"postgre://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5432), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"kafka://scanme.nmap.org:9092\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9092), [Errno 99] Cannot assign requested address\"\n",
       "The status of \"https://scanme.nmap.org:443\" is: \"Offline?\" 👎 \n",
       "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
+      "The status of \"ssh://scanme.nmap.org:2222\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2222), [Errno 99] Cannot assign requested address\"\n",
       "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍\n",
+      "The status of \"http://scanme.nmap.org:80\" is: \"Online!\" 👍\n",
       "The status of \"http://scanme.nmap.org/\" is: \"Online!\" 👍\n",
       "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
       "  Error: \"Permission denied\"\n",
-      "The status of \"ssh://scanme.nmap.org:22\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Permission denied\"\n",
       "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Permission denied\"\n",
+      "The status of \"ssh://scanme.nmap.org:22\" is: \"Offline?\" 👎 \n",
       "  Error: \"Permission denied\"\n",
       "Task done with result=None  << return val of main()\n"
      ]
     }
    ],
    "source": [
-    "check(timeout=5, urls=[\"kafka://scanme.nmap.org\",\n",
+    "check(timeout=15, urls=[\"kafka://scanme.nmap.org\",\n",
     "                       \"kafka://scanme.nmap.org:9092\",\n",
     "                       \"kafka://scanme.nmap.org:9093\",\n",
     "                       \"postgre://scanme.nmap.org\",\n",
@@ -228,8 +264,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "aaf9f4e5-01cf-4c0f-bec5-60712092e589",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Async event loop already running. Adding coroutine to the event loop.\n",
+      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍\n",
+      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍\n",
+      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍\n",
+      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍\n",
+      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍\n",
+      "The status of \"raw://scanme.nmap.org:5555\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5555), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"raw://scanme.nmap.org:2323\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2323), [Errno 99] Cannot assign requested address\"\n",
+      "Task done with result=None  << return val of main()\n"
+     ]
+    }
+   ],
+   "source": [
+    "check(timeout=15, urls=[\n",
+    "                        \"raw://scanme.nmap.org:22\",#22/tcp    open     ssh\n",
+    "                        \"raw://scanme.nmap.org:53\",#53/tcp    open     domain\n",
+    "                        \"raw://scanme.nmap.org:80\",#80/tcp    open     http\n",
+    "                        \"raw://scanme.nmap.org:2323\",#2323/tcp  filtered 3d-nfsd\n",
+    "                        \"raw://scanme.nmap.org:5555\",#5555/tcp  filtered freeciv\n",
+    "                        \"raw://scanme.nmap.org:9929\",#9929/tcp  open     nping-echo\n",
+    "                        \"raw://scanme.nmap.org:31337\"#31337/tcp open     Elite\n",
+    "                       ]\n",
+    "     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afa42899-9f1f-4bf9-b7a3-80782bc79f5e",
    "metadata": {},
    "outputs": [],
    "source": []
